...
                android:id="@+id/defaultTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fields_default" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/disabledTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fields_disabled" />
        </com.admiral.uikit.components.tabs.StandardTabs>

        <com.admiral.uikit.components.select.Feedback
...
