<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <com.admiral.uikit.layout.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:maxLines="2"
            android:text="@string/radio_buttons_title"
            app:admiralTextStyle="largetitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.admiral.uikit.components.tabs.StandardTabs
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@id/defaultTab"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/defaultTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_default" />

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/disabledTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabs_disabled" />

        </com.admiral.uikit.components.tabs.StandardTabs>

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/radio_buttons_default"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />

        <RadioGroup
            android:id="@+id/rgNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault">

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_buttons_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton1" />
        </RadioGroup>

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/radio_buttons_default"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgNormal" />

        <RadioGroup
            android:id="@+id/rgChecked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault1">

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_buttons_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton3" />

        </RadioGroup>

        <com.admiral.uikit.components.text.TextView
            android:id="@+id/tvDefault2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:layout_marginTop="@dimen/module_x9"
            android:text="@string/radio_buttons_error"
            app:admiralTextColorNormalEnabled="@color/grey_40"
            app:admiralTextStyle="headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgChecked" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x3"
            android:layout_marginTop="@dimen/module_x3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDefault2">

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:admiralIsError="true" />

            <com.admiral.uikit.components.radiobutton.RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_buttons_text"
                app:admiralIsError="true"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioButton5" />
        </RadioGroup>

    </com.admiral.uikit.layout.ConstraintLayout>

</ScrollView>