<?xml version="1.0" encoding="utf-8"?>
<com.admiral.uikit.layout.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.admiral.uikit.components.appbar.Appbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.admiral.uikit.components.text.TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/module_x4"
        android:text="@string/spinner_title"
        app:admiralTextStyle="largetitle1" />

    <com.admiral.uikit.components.tabs.StandardTabs
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/module_x4"
        app:checkedId="@+id/smallTab">

        <com.admiral.uikit.components.tabs.StandardTab
            android:id="@+id/smallTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_small" />

        <com.admiral.uikit.components.tabs.StandardTab
            android:id="@+id/mediumTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_medium" />

        <com.admiral.uikit.components.tabs.StandardTab
            android:id="@+id/bigTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_big" />
    </com.admiral.uikit.components.tabs.StandardTabs>

    <com.admiral.uikit.components.spinner.Spinner
        android:id="@+id/spinnerSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="99dp"
        app:admiralSpinnerSize="small" />

    <com.admiral.uikit.components.spinner.Spinner
        android:id="@+id/spinnerMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="96dp"
        android:visibility="gone"
        app:admiralSpinnerSize="medium" />

    <com.admiral.uikit.components.spinner.Spinner
        android:id="@+id/spinnerBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="96dp"
        android:visibility="gone"
        app:admiralSpinnerSize="big" />
</com.admiral.uikit.layout.LinearLayout>
